# facet

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.json
.claude/hooks/: post-edit-check.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  README.md  deny.toml  edition.build.test.ts  edition.build.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/crates/contract-rs/: Cargo.toml  build.rs
apps/desktop/crates/contract-rs/src/: lib.rs
apps/desktop/crates/license-gate/: Cargo.toml
apps/desktop/crates/license-gate/src/: checks.rs  main.rs  module_path.rs
apps/desktop/crates/media-core/: Cargo.toml
apps/desktop/crates/media-core/examples/: preview.rs  probe.rs  reframe.rs
apps/desktop/crates/media-core/src/: audio.rs  cancel.rs  concurrency.rs  crop.rs  decode.rs  encode.rs  encoder_select.rs  error.rs  fit.rs  lib.rs  path_key.rs  pipeline.rs  preview.rs  probe.rs  progress.rs  spec.rs  trim.rs
apps/desktop/crates/media-core/tests/: audio_regression.rs  cancellation_and_output_busy_reframe.rs  concurrency_reframe.rs  staging_dir_reframe.rs
apps/desktop/scripts/: build-private.mjs
apps/desktop/src/: App.public-edition.test.tsx  App.test.tsx  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev-public.conf.json  tauri.mac-local.conf.json  tauri.mac-private.conf.json  tauri.release.conf.json  tauri.win-private.conf.json  tauri.win-release-dryrun.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: edit_spec_contract.rs  job_state.rs  mod.rs  preview.rs  probe.rs  publish.rs  reframe.rs
apps/desktop/src-tauri/src/commands/publish/: credential_store.rs  ig.rs  mod.rs  r2_credentials.rs  scheduler_check.rs  youtube.rs  youtube_oauth.rs
apps/desktop/src-tauri/src/jobs/: manifest.rs  mod.rs  r2_upload.rs  scheduler_client.rs  sigv4.rs
apps/desktop/src-tauri/tests/fixtures/: README.md
apps/desktop/src/components/ui/: Card.tsx  Modal.test.tsx  Modal.tsx  StatusPill.tsx  confirm.tsx  icons.tsx
apps/desktop/src/features/clips/: ClipEditor.tsx  ClipList.tsx
apps/desktop/src/features/crop-overlay/: CropOverlay.test.tsx  CropOverlay.tsx
apps/desktop/src/features/export/: ExportDetail.test.tsx  ExportDetail.tsx  ExportListItem.tsx  ExportModal.tsx  ExportPreviewDetail.test.tsx  ExportPreviewDetail.tsx  ExportPreviewListItem.tsx  ExportScreen.test.tsx  ExportScreen.tsx
apps/desktop/src/features/publish-settings/: PublishGateContext.tsx  PublishSettingsSection.test.tsx  PublishSettingsSection.tsx  entry.public.ts  entry.public.tsx  entry.ts  publishSettingsClient.ts  schedulerUrlStore.ts  usePublishGate.ts
apps/desktop/src/features/settings/: SettingsDialog.test.tsx  SettingsDialog.tsx
apps/desktop/src/features/timeline/: Timeline.test.tsx  Timeline.tsx
apps/desktop/src/features/update/: UpdateNotification.tsx
apps/desktop/src/features/upload/: BulkPresetsModal.tsx  Disclosure.tsx  OutputCard.tsx  OutputPublishSection.tsx  PostDetail.tsx  PostRow.tsx  PostScheduleSection.tsx  ReframeScreen.previewErrors.test.tsx  ReframeScreen.public.test.tsx  ReframeScreen.tsx  ScheduleSettingsModal.tsx  StatusBadge.tsx  UploadModal.tsx  UploadScreen.igPublish.test.tsx  UploadScreen.test.tsx  UploadScreen.tsx  UploadScreen.youtubePublish.test.tsx  UploadScreenPrivate.tsx  entry.public.ts  entry.ts  igPublish.ts  publishSupport.ts  uploadTypes.ts  usePublishExtras.tsx  youtubePublish.ts
apps/desktop/src/features/wizard/: StepIndicator.test.tsx  StepIndicator.tsx  WizardShell.tsx
apps/desktop/src/lib/: clipSig.ts  edition.ts  format.ts  getErrorMessage.test.ts  getErrorMessage.ts  jobId.ts  notification.ts  schedule.test.ts  schedule.ts  settings.test.tsx  settings.tsx  tauri.test.ts  tauri.ts  tauriJobLifecycle.test.ts  tauriJobLifecycle.ts  uniqueBaseName.test.ts  uniqueBaseName.ts  updater.test.ts  updater.ts  useEncodeSettingsSync.test.tsx  useEncodeSettingsSync.ts  usePauseVideosOnHide.ts  usePreview.test.ts  usePreview.ts  useReframeQueue.test.ts  useReframeQueue.ts
apps/desktop/src/mock/: README.md  core.test.ts  core.ts  dialog.ts  event.ts  eventBus.ts  fixtures.ts  invoke-parity.test.ts  jobRunner.ts  notification.ts  opener.ts  path.ts  process.ts  updater.ts
apps/desktop/src/test/: contract-boundary.test.ts  editSpec-contract-types.test.ts  render.tsx  setup.ts  tauri-mock.ts
apps/scheduler/: package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wrangler.toml
apps/scheduler/migrations/: 0001_jobs.sql
apps/scheduler/src/: auth.test.ts  auth.ts  cron.test.ts  cron.ts  env.ts  fetch-with-timeout.test.ts  fetch-with-timeout.ts  index.test.ts  index.ts  instagram.test.ts  instagram.ts  publish-do.test.ts  publish-do.ts  token-refresh.test.ts  token-refresh.ts
apps/scheduler/src/routes/: jobs.test.ts  jobs.ts
apps/scheduler/test/integration/: apply-migrations.ts  d1-schema.test.ts  env.d.ts  publish-do.test.ts
apps/studio/server/: .env.example  package.json  tsconfig.json
apps/studio/server/src/: config.ts  index.ts
apps/studio/server/src/routes/: export.ts  files.ts  preview.ts  publish.ts
apps/studio/server/src/services/: encode.ts  export-jobs.ts  (+3 more)
apps/studio/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
apps/studio/web/src/: App.tsx  index.css  main.tsx  types.ts
docs/: desktop-migration-plan.md  mac-handover.md  phase2-0-windows-setup.md  phase4-packaging.md  self-host-guide.md
scripts/: check-release-version.ps1  fetch-ffmpeg-lgpl.ps1  run-license-gate.ps1
spikes/libav-reframe/: Cargo.toml  README.md
spikes/libav-reframe/src/: reframe.rs
(+18 files in other folders)
