[package]
name = "facet-desktop"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Facet desktop app (Tauri v2 shell)"
license = ""
repository = ""
default-run = "facet-desktop"

[lib]
# tauri のモバイルエントリポイント生成に必要な crate-type
crate-type = ["staticlib", "cdylib", "rlib"]
name = "facet_desktop_lib"

[features]
# Phase 3(IG/YouTube 公開連携)本体が乗る土台。既定(= このリストに載せない)では
# 無効 — public(配布版)ビルドはこの feature を有効化せず、投稿系コマンドを
# バイナリから物理的に除外する。private ビルド(build:mac-private 等)でのみ
# `--features publish` で有効化する(docs/desktop-migration-plan.md §6.6)。
# 資格情報の OS キーチェーン連携(keyring)+ scheduler 疎通チェック(reqwest)を
# この feature 限定の optional dependency として追加する(§11-3、下記 [dependencies])。
publish = ["dep:keyring", "dep:reqwest"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 資格情報の OS キーチェーン連携(macOS Keychain / Windows Credential Manager)。
# `publish` feature 限定(配布版 = public ビルドの依存には入れない、§11-3)。
# デフォルト機能(feature "v1")で Keychain Services / Credential Manager / Secret
# Service の3プラットフォームが揃うため features は既定のままでよい。
keyring = { version = "4", optional = true }
# scheduler への疎通チェック(GET /health, Bearer 認証付き GET /)用 HTTP クライアント。
# `publish` feature 限定。reqwest は tauri-plugin-updater 経由で既に依存木に存在する
# ため(Cargo.lock 参照)、新規に tauri-plugin-http を導入するより依存を増やさずに済む。
# TLS は Windows での OpenSSL ネイティブビルド要件を避けるため rustls を明示する
# (reqwest 0.13 の feature 名は "rustls-tls" ではなく "rustls")。
reqwest = { version = "0.13", default-features = false, features = [
	"json",
	"rustls",
], optional = true }
# `protocol-asset`: renderer が `convertFileSrc`(元動画/プレビュー/書き出し結果の
# <video src> に使う asset:// プロトコル)で任意パスのローカルファイルを読むために必要。
# この機能フラグが無いと asset プロトコルのハンドラ自体がビルドに含まれず、
# tauri.conf.json 側で `security.assetProtocol.enable: true` を設定しても効果が無い
# (`asset` カスタムプロトコルの登録は `#[cfg(feature = "protocol-asset")]` で
# コンパイル時に丸ごと除外されるため)。
tauri = { version = "2", features = ["protocol-asset"] }
# renderer 側のネイティブファイル選択(入力動画・書き出し先フォルダ)用。
# Wave 5 では invoke 境界(reframe/probe/preview)のみだったが、renderer 配線
# (Phase 2 最終接続)で file/directory picker が必要になったため追加する。
tauri-plugin-dialog = "2"
# 書き出し先フォルダをエクスプローラ(等 OS 既定のファイルマネージャ)で開くために追加。
# studio 版は HTTP の ZIP ダウンロードで書き出し結果を渡すが、desktop は実ファイルを
# ローカルへ直接書き出すため、ZIP 化ではなく「保存先フォルダを開く」形で完結させる
# (bulk-download バグ修正、docs/desktop-migration-plan.md の既知ギャップ対応)。
tauri-plugin-opener = "2"
# 書き出し完了時のデスクトップ通知用。renderer から `@tauri-apps/plugin-notification`
# 経由で権限確認と通知発火を行う(`notification:default` 権限、capabilities/default.json 参照)。
tauri-plugin-notification = "2"
# Phase 4 Wave C: 自動更新(起動時チェック→アプリ内通知→ダウンロード→再起動)。
# tauri-plugin-updater が latest.json(GitHub Releases)の取得・署名検証・
# インストーラ実行までを担う。tauri-plugin-process は restart コマンドを提供し、
# renderer から `@tauri-apps/plugin-process` の `relaunch()` を呼ぶために必要
# (登録しないと invoke が失敗する)。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reframe/probe コマンドの実処理(Wave 5: コマンド境界の配線)。
media-core = { path = "../crates/media-core" }

[dev-dependencies]
# `commands::publish::scheduler_check` のテスト(`#[tokio::test]`)用の非同期ランタイム。
# dev-dependency なので `publish` feature の有無に関わらず常に取得されるが、実行時
# コードには一切含まれない(release バイナリのサイズ・依存に影響しない)。
tokio = { version = "1", features = ["rt", "macros"] }
