[package]
name = "facet-desktop"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Facet desktop app (Tauri v2 shell)"
license = ""
repository = ""
default-run = "facet-desktop"

[lib]
# tauri のモバイルエントリポイント生成に必要な crate-type
crate-type = ["staticlib", "cdylib", "rlib"]
name = "facet_desktop_lib"

[features]
# Phase 3(IG/YouTube 公開連携)本体が乗る土台。既定(= このリストに載せない)では
# 無効 — public(配布版)ビルドはこの feature を有効化せず、投稿系コマンドを
# バイナリから物理的に除外する。private ビルド(build:mac-private 等)でのみ
# `--features publish` で有効化する(docs/desktop-migration-plan.md §6.6)。
# 資格情報の OS キーチェーン連携(keyring)+ scheduler 疎通チェック(reqwest)を
# この feature 限定の optional dependency として追加する(§11-3、下記 [dependencies])。
# Phase 3 本体(IG 連携、§6.4): R2 アップロード(rusty-s3 の presigned PUT + reqwest の
# ストリーミング body)・POST /jobs・r2Key/idempotencyKey 採番(uuid)・エラー型(thiserror)・
# アップロードの select! ベースのキャンセル(tokio time/fs)を同じ feature 限定で追加する。
# Phase 3 本体(YouTube 連携、§6.5・§11-4): OAuth(Installed App フロー)+ resumable
# upload + publishAt 予約を `google-youtube3` + `yup-oauth2` に委ねる(手書きしない、
# §6.5・commands/publish/youtube_oauth.rs 冒頭コメント)。
publish = [
	"dep:keyring",
	"dep:reqwest",
	"dep:rusty-s3",
	"dep:url",
	"dep:uuid",
	"dep:thiserror",
	"dep:tokio",
	"dep:futures-util",
	"dep:tokio-util",
	"dep:google-youtube3",
	"dep:yup-oauth2",
	"dep:chrono",
	"dep:mime",
	"dep:async-trait",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 資格情報の OS キーチェーン連携(macOS Keychain / Windows Credential Manager)。
# `publish` feature 限定(配布版 = public ビルドの依存には入れない、§11-3)。
# デフォルト機能(feature "v1")で Keychain Services / Credential Manager / Secret
# Service の3プラットフォームが揃うため features は既定のままでよい。
keyring = { version = "4", optional = true }
# scheduler への疎通チェック(GET /health, Bearer 認証付き GET /)用 HTTP クライアント。
# `publish` feature 限定。reqwest は tauri-plugin-updater 経由で既に依存木に存在する
# ため(Cargo.lock 参照)、新規に tauri-plugin-http を導入するより依存を増やさずに済む。
# TLS は Windows での OpenSSL ネイティブビルド要件を避けるため rustls を明示する
# (reqwest 0.13 の feature 名は "rustls-tls" ではなく "rustls")。
reqwest = { version = "0.13", default-features = false, features = [
	"json",
	"rustls",
	# R2 アップロードを `Body::wrap_stream` でストリーミングする(300MB のファイルを
	# 丸ごとメモリに読み込まない)ために必要(§jobs/r2_upload.rs)。
	"stream",
], optional = true }
# R2(S3 互換)への署名付き PUT アップロード用。Phase 3(§6.4)は「フル AWS SDK は避け、
# 署名専用の軽量クレートを使う」方針のため、aws-sigv4(aws-smithy 系一式を伴う)ではなく
# rusty-s3 を採用した(選定理由は最終報告 / jobs/sigv4.rs 冒頭コメント参照)。
# Sans-IO(HTTP クライアントを同梱しない)な presigned URL 生成のみのクレートで、
# 依存は `rustcrypto` feature(hmac + sha2)のみに絞る("full" feature が引き込む
# XML パーサ/serde/base64/md5 はマルチパート・list-objects 等 today 使わない機能のため不要)。
rusty-s3 = { version = "0.10", default-features = false, features = [
	"rustcrypto",
], optional = true }
# rusty-s3 の公開 API(`Bucket::new`/署名済み `Url`)が使う型。reqwest も同じ crate を
# 再エクスポートしているが(`reqwest::Url` == `url::Url`)、`jobs::sigv4` は reqwest に
# 依存しない層のため明示的に直接依存させる。
url = { version = "2", optional = true }
# r2Key(`posts/<date>/<uuid>.mp4`)・idempotencyKey の採番用(旧 TS 実装の
# `randomUUID()` に対応、§jobs/manifest.rs)。
uuid = { version = "1", features = ["v4"], optional = true }
# jobs/ 配下のエラー型(ValidationError 等)の Display 導出用。media-core と同じ
# クレート(バージョンも合わせる)を使う。
thiserror = { version = "2", optional = true }
# R2 アップロードのストリーミング読み取り(`tokio::fs::File`)・キャンセル監視の
# ポーリング(`tokio::time::sleep`)・`tokio::select!` 用。`rt`/`macros` は
# dev-dependencies の tokio(下記)と統合されるため実質追加コストはない。
tokio = { version = "1", features = ["time", "fs", "macros"], optional = true }
# R2 アップロード進捗イベント用に `ReaderStream` の各チャンクを覗く
# (`TryStreamExt::inspect_ok`)。reqwest の "stream" feature が既に推移的依存として
# 引き込むため、直接依存にしても依存木は増えない。
futures-util = { version = "0.3", default-features = false, features = [
	"std",
], optional = true }
# `ReaderStream`(ファイルをチャンク列へ変換して `reqwest::Body::wrap_stream` に渡す)用。
# reqwest の "stream" feature が既に同じバージョン・feature("io")で推移的に引き込むため、
# 直接依存にしても依存木は増えない。
tokio-util = { version = "0.7.9", default-features = false, features = [
	"io",
], optional = true }
# YouTube Data API v3(OAuth + resumable upload + publishAt 予約、§6.5・§11-4)。
# 手書きの OAuth/resumable アップロードは避け、保守継続中のこのクレートに委ねる方針
# (docs/desktop-migration-plan.md §6.5 で確定済み)。既定 feature("yup-oauth2" + "ring")
# は yup-oauth2(OAuth 実装本体)と rustls の ring バックエンドを含み、reqwest 側
# ("rustls" feature、既定で ring バックエンド)と同じ TLS 実装系統になる
# (aws-lc-rs 等の別バックエンドを混在させない。§commands/publish/youtube_oauth.rs
# 冒頭コメントの設計判断)。
google-youtube3 = { version = "7", optional = true }
# google-youtube3 は yup-oauth2 を `default-features = false` で引き込むため、
# `InstalledFlowAuthenticator::builder`(yup-oauth2 側の "hyper-rustls" feature 限定)が
# 有効にならない。同一クレートを直接依存としても宣言し、Cargo のフィーチャー統合
# (同一バージョンの依存は要求元をまたいで feature の和集合になる)で "hyper-rustls" を
# 有効化する。`default-features = false` で "service-account"(本アプリは Installed App
# フローのみで不要)を含めない。
yup-oauth2 = { version = "12", default-features = false, features = [
	"hyper-rustls",
], optional = true }
# `VideoStatus::publish_at`/`VideoSnippet::published_at` が `chrono::DateTime<Utc>` を
# 要求するため必要(google-youtube3 は chrono を再エクスポートしない)。IG 側
# (jobs/manifest.rs)は依存を増やさないため自前のカレンダー計算を使っているが、
# ここでは google-youtube3 の公開 API 型そのものが chrono を要求するため回避できない。
chrono = { version = "0.4", default-features = false, features = [
	"std",
], optional = true }
# `upload_resumable`/`upload` の MIME 型引数用("video/mp4" を静的にパースするだけの
# ごく薄い用途)。
mime = { version = "0.3", optional = true }
# yup-oauth2 の `TokenStorage` トレイト(async fn を含む)を実装するために必要
# (§commands/publish/youtube_oauth.rs の `KeychainTokenStorage`)。
async-trait = { version = "0.1", optional = true }
# `protocol-asset`: renderer が `convertFileSrc`(元動画/プレビュー/書き出し結果の
# <video src> に使う asset:// プロトコル)で任意パスのローカルファイルを読むために必要。
# この機能フラグが無いと asset プロトコルのハンドラ自体がビルドに含まれず、
# tauri.conf.json 側で `security.assetProtocol.enable: true` を設定しても効果が無い
# (`asset` カスタムプロトコルの登録は `#[cfg(feature = "protocol-asset")]` で
# コンパイル時に丸ごと除外されるため)。
tauri = { version = "2", features = ["protocol-asset"] }
# renderer 側のネイティブファイル選択(入力動画・書き出し先フォルダ)用。
# Wave 5 では invoke 境界(reframe/probe/preview)のみだったが、renderer 配線
# (Phase 2 最終接続)で file/directory picker が必要になったため追加する。
tauri-plugin-dialog = "2"
# 書き出し先フォルダをエクスプローラ(等 OS 既定のファイルマネージャ)で開くために追加。
# studio 版は HTTP の ZIP ダウンロードで書き出し結果を渡すが、desktop は実ファイルを
# ローカルへ直接書き出すため、ZIP 化ではなく「保存先フォルダを開く」形で完結させる
# (bulk-download バグ修正、docs/desktop-migration-plan.md の既知ギャップ対応)。
tauri-plugin-opener = "2"
# 書き出し完了時のデスクトップ通知用。renderer から `@tauri-apps/plugin-notification`
# 経由で権限確認と通知発火を行う(`notification:default` 権限、capabilities/default.json 参照)。
tauri-plugin-notification = "2"
# Phase 4 Wave C: 自動更新(起動時チェック→アプリ内通知→ダウンロード→再起動)。
# tauri-plugin-updater が latest.json(GitHub Releases)の取得・署名検証・
# インストーラ実行までを担う。tauri-plugin-process は restart コマンドを提供し、
# renderer から `@tauri-apps/plugin-process` の `relaunch()` を呼ぶために必要
# (登録しないと invoke が失敗する)。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reframe/probe コマンドの実処理(Wave 5: コマンド境界の配線)。
media-core = { path = "../crates/media-core" }

[dev-dependencies]
# `commands::publish::scheduler_check` / `jobs::r2_upload` / `jobs::scheduler_client` の
# テスト(`#[tokio::test]`)用の非同期ランタイム。dev-dependency なので `publish` feature
# の有無に関わらず常に取得されるが、実行時コードには一切含まれない
# (release バイナリのサイズ・依存に影響しない)。
tokio = { version = "1", features = ["rt", "macros"] }
# `jobs::sigv4` のテストで AWS 公式の SigV4 テストベクタを固定時刻(2013-05-24)で
# 再現するために使う(`rusty_s3::S3Action::sign_with_time` の引数型)。本番コードは
# 現在時刻を使う `sign()` のみを使うため jiff への依存はテストに閉じる。
# バージョンは rusty-s3 が要求するもの(`0.2`)に合わせる。
jiff = "0.2"
