[package]
name = "media-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "libav ベースのメディアパイプライン(Phase 2 で実装)"

[lib]
name = "media_core"

[dependencies]
# システムの FFmpeg 8.x(libavcodec 62 系)に major.minor を合わせる(spikes/libav-reframe と同一)。
ffmpeg-next = "8.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "reframe"
path = "examples/reframe.rs"

[[example]]
name = "probe"
path = "examples/probe.rs"
